# rl-2d-shooter-game

./: .gitmodules  CMakeLists.txt  README.md
include/game/: gameworld.h
include/game/misc/: typedefs.h
include/game/objects/: bullet.h  gameobject.h  objectindex.h  player.h  wall.h
include/lib/: MemoryPool.h
modules/: CMakeLists.txt  min-2d-engine.cmake
src/: main.cpp
src/objects/: gameobject.cpp  player.cpp
